--- a/README
+++ b/README
@@ -4,6 +4,6 @@ linkify user-defined strings in IM messages.
 Original version by Sadrul Habib Chowdhury <sadrul@pidgin.im>
 downloaded from http://pidgin.im/~sadrul/pp/pl/replaceX.pl
 
-advanced-replaceX.pl enhancements by Stefan Gipper <support@coder-world.de>
+advanced-replaceX.pl enhancements by Stefanos - http://advanced-replacex-perl-pidgin.googlecode.com/
 downloaded from
 http://advanced-replacex-perl-pidgin.googlecode.com/files/advanced-replacex.pl
